修复ID精确搜索500错误：使用Page(current,size,total)构造器替代setPages